[project]
name = "finance-mcp"
version = "1.0.0"
description = "Finance MCP Server - Stock prices, news, and financial data for AI assistants"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "yfinance>=0.2.40",
    "finnhub-python>=2.4.20",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
